# time-series-forecasting-lab

./: .gitignore  pyproject.toml
config/: config.yaml
docs/architecture/: 02_forecasting_framework_design.md  03_forecaster_interface.md  04_dataset_design.md  05_feature_engineering_framework.md  06_feature_engineering.md
docs/visions/: 01_vision_and_mission.md
reports/model_cards/: arima.md
src/ts_forecasting_lab/config/: reader.py  schema.py  settings.py
src/ts_forecasting_lab/models/: base.py
src/ts_forecasting_lab/models/statistical/: naive.py
tests/: test_base.py  test_naive.py  test_reader.py  test_schema.py  test_settings.py
